--- a/01/package.json
+++ b/01/package.json
@@ -22,6 +22,7 @@
     "uglify-js": "^2.8.22"
   },
   "dependencies": {
+    "chroma-js": "^1.3.4",
     "dat.gui": "^0.6.1",
     "nippon-colors": "^1.0.0",
     "randomcolor": "^0.5.0",
